; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/extr_renesas-ceu.c_ceu_s_parm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/extr_renesas-ceu.c_ceu_s_parm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_streamparm = type { i32 }
%struct.ceu_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_streamparm*)* @ceu_s_parm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ceu_s_parm(%struct.file* %0, i8* %1, %struct.v4l2_streamparm* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_streamparm*, align 8
  %7 = alloca %struct.ceu_device*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_streamparm* %2, %struct.v4l2_streamparm** %6, align 8
  %8 = load %struct.file*, %struct.file** %4, align 8
  %9 = call %struct.ceu_device* @video_drvdata(%struct.file* %8)
  store %struct.ceu_device* %9, %struct.ceu_device** %7, align 8
  %10 = load %struct.file*, %struct.file** %4, align 8
  %11 = call i32 @video_devdata(%struct.file* %10)
  %12 = load %struct.ceu_device*, %struct.ceu_device** %7, align 8
  %13 = getelementptr inbounds %struct.ceu_device, %struct.ceu_device* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.v4l2_streamparm*, %struct.v4l2_streamparm** %6, align 8
  %18 = call i32 @v4l2_s_parm_cap(i32 %11, i32 %16, %struct.v4l2_streamparm* %17)
  ret i32 %18
}

declare dso_local %struct.ceu_device* @video_drvdata(%struct.file*) #1

declare dso_local i32 @v4l2_s_parm_cap(i32, i32, %struct.v4l2_streamparm*) #1

declare dso_local i32 @video_devdata(%struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
